syntax = "proto3";

package dedup;

message Duplicate {
  string id = 1;
  int32 dedup_id = 2;
}
